--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,4 @@ readme = "README.md"
 require-python = ">3.8"
 [[project.authors]]
 email = "unerue@me.com"
-name = "Kyung-Su Kang"
+name = "Chae-Seong Kim"
