--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -5,5 +5,5 @@ description = ""
 readme = "README.md"
 require-python = ">3.8"
 [[project.authors]]
-email = "unerue@me.com"
-name = "Kyung-Su Kang"
+email = "amazone6490@naver.com"
+name = "Chae-seong Kim"
